--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ main{
   background-color: rgb(245 243 248);
   border: 10px solid white;
   border-radius: 30px;
-  box-shadow: 0px 0px 1px .2px , 25px 25px 15px 0 rgb(240, 238, 243);
+  box-shadow: 25px 25px 15px 0 rgb(240, 238, 243);
   display: flex;
   flex-flow: column wrap;
   gap: 8.5px;
